test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-unmanaged-from-oknil-unmanaged.good
init-field-arg-nonnil-unmanaged-from-oknil-unmanaged.chpl:9: In initializer:
init-field-arg-nonnil-unmanaged-from-oknil-unmanaged.chpl:10: error: cannot assign to non-nilable unmanaged MyClass from nilable unmanaged MyClass?
